syntax = "proto3";
option java_multiple_files = true;

package com.unicloud.bizzone.demo.service;

message ClinicIdRequest {
  string id = 1;
}

message ClinicDetailResponse {
  string id = 1;
  string description = 2;
  string taxCode = 3;
  string phone = 5;
  float avgRatingScore = 4;
}

service ClinicService {
  rpc getById(ClinicIdRequest) returns (ClinicDetailResponse);
}
